--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 >
   <df-messenger-chat-bubble
     chat-title="Financial Bunny AI"
-    chat-title-icon="./assets/woman.png"
+    chat-title-icon="./assets/image.png"
     bot-actor-image=""
     chat-subtitle="online"
     allow-fullscreen="small"
@@ -47,14 +47,13 @@
     --df-messenger-message-bot-background: #e5e5ea;
     --df-messenger-send-icon: #b8187b;
     --df-messenger-primary-color: #7c9d46;
-    --df-messenger-titlebar-icon-width: 44px;
-    --df-messenger-titlebar-icon-height: 44px;
+    --df-messenger-titlebar-icon-width: 54px;
+    --df-messenger-titlebar-icon-height: 54px;
     --df-messenger-titlebar-background: linear-gradient(to right, #7C9D46, #445e1e);
     --df-messenger-titlebar-title-font-weight: 700;
     --df-messenger-titlebar-font-color: white;
     --df-messenger-titlebar-subtitle-font-color: white;
     --df-messenger-titlebar-title-font-size: 16px;
-    
     
     bottom: 16px;
     right: 16px;
