Your commit message

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 >
   <df-messenger-chat-bubble
     chat-title="Financial Bunny AI"
-    chat-title-icon="./assets/image.png"
+    chat-title-icon="./assets/nicolette_image.png"
     bot-actor-image=""
     chat-subtitle="online"
     allow-fullscreen="small"
