--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
     chat-subtitle="online"
     allow-fullscreen="small"
     chat-collapse-icon = "./assets/down_arrow.svg"
+    chat-icon = "./assets/comment_icon.svg"
   >
   </df-messenger-chat-bubble>
 </df-messenger>
