Your commit message

--- a/index.html
+++ b/index.html
@@ -14,64 +14,72 @@
       rel="stylesheet"
       href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@48,400,1,0"
     />
-    <script src="script.js" defer></script>
-
-<link rel="stylesheet" href="https://www.gstatic.com/dialogflow-console/fast/df-messenger/prod/v1/themes/df-messenger-default.css">
+    <link
+      rel="stylesheet"
+      href="https://www.gstatic.com/dialogflow-console/fast/df-messenger/prod/v1/themes/df-messenger-default.css"
+    />
     <script src="https://www.gstatic.com/dialogflow-console/fast/df-messenger/prod/v1/df-messenger.js"></script>
-<df-messenger
+
+    <df-messenger
   project-id="nicolette-mashile-424119"
-  agent-id="91e17cd7-7ed5-4f4a-bd4c-81d250a8f978"
-  language-code="en"
-  max-query-length="-1"
->
-  <df-messenger-chat-bubble
-    chat-title="Financial Bunny AI"
-    chat-title-icon="./assets/nicolette_image.png"
-    bot-actor-image=""
-    chat-subtitle="online"
-    allow-fullscreen="small"
-    chat-collapse-icon = "./assets/down_arrow.svg"
-    chat-icon = "./assets/comment_icon.svg"
-  >
-  </df-messenger-chat-bubble>
-</df-messenger>
+  agent-id="0d00dbbe-7db6-471f-9dc8-baafd7753cfd"
+      language-code="en"
+      max-query-length="-1"
+    >
+      <df-messenger-chat-bubble
+        chat-title="Financial Bunny AI"
+        chat-title-icon="./assets/nicolette_image.png"
+        bot-actor-image=""
+        chat-subtitle="online"
+        allow-fullscreen="small"
+        chat-collapse-icon="./assets/down_arrow.svg"
+        chat-icon="./assets/comment_icon.svg"
+      >
+      </df-messenger-chat-bubble>
+    </df-messenger>
 
-<style>
-  df-messenger {
-    z-index: 999;
-    position: fixed;
-    --df-messenger-font-color: #000;
-    --df-messenger-font-family: Google Sans;
-    --df-messenger-chat-background: #ffffff;
-    --df-messenger-message-user-background:  linear-gradient(to right, #7C9D46, #445e1e);
-    --df-messenger-button-titlebar-color: #8fa512;
-    --df-messenger-message-bot-background: #e5e5ea;
-    --df-messenger-send-icon: #b8187b;
-    --df-messenger-primary-color: #7c9d46;
-    --df-messenger-titlebar-icon-width: 54px;
-    --df-messenger-titlebar-icon-height: 54px;
-    --df-messenger-titlebar-background: linear-gradient(to right, #7C9D46, #445e1e);
-    --df-messenger-titlebar-title-font-weight: 700;
-    --df-messenger-titlebar-font-color: white;
-    --df-messenger-titlebar-subtitle-font-color: white;
-    --df-messenger-titlebar-title-font-size: 16px;
-    
-    bottom: 16px;
-    right: 16px;
-  }
+    <style>
+      df-messenger {
+        z-index: 999;
+        position: fixed;
+        --df-messenger-font-color: #000;
+        --df-messenger-font-family: Google Sans;
+        --df-messenger-chat-background: #ffffff;
+        --df-messenger-message-user-background: linear-gradient(
+          to right,
+          #7c9d46,
+          #445e1e
+        );
+        --df-messenger-button-titlebar-color: #8fa512;
+        --df-messenger-message-bot-background: #e5e5ea;
+        --df-messenger-send-icon: #b8187b;
+        --df-messenger-primary-color: #7c9d46;
+        --df-messenger-titlebar-icon-width: 54px;
+        --df-messenger-titlebar-icon-height: 54px;
+        --df-messenger-titlebar-background: linear-gradient(
+          to right,
+          #7c9d46,
+          #445e1e
+        );
+        --df-messenger-titlebar-title-font-weight: 700;
+        --df-messenger-titlebar-font-color: white;
+        --df-messenger-titlebar-subtitle-font-color: white;
+        --df-messenger-titlebar-title-font-size: 16px;
 
-  df-messenger-chat-bubble {
-    --df-messenger-chat-window-offset: 8px;
-    --df-messenger-chat-bubble-icon-size: 32px;
-    --df-messenger-chat-bubble-icon-color: white;
-    --df-messenger-chat-bubble-background: #7C9D46;
-    --df-messenger-message-user-font-color: white;
-    --df-messenger-message-bot-font-color: black;
-    --df-messenger-focus-color: black;
-  }
+        bottom: 16px;
+        right: 16px;
+      }
 
-
-</style>
+      df-messenger-chat-bubble {
+        --df-messenger-chat-window-offset: 8px;
+        --df-messenger-chat-bubble-icon-size: 32px;
+        --df-messenger-chat-bubble-icon-color: white;
+        --df-messenger-chat-bubble-background: #7c9d46;
+        --df-messenger-message-user-font-color: white;
+        --df-messenger-message-bot-font-color: black;
+        --df-messenger-focus-color: black;
+      }
+    </style>
   </head>
   <body></body>
 </html>
