Your commit message

--- a/index.html
+++ b/index.html
@@ -73,6 +73,7 @@
         --df-messenger-chat-bubble-background: #7c9d46;
         --df-messenger-message-user-font-color: white;
         --df-messenger-message-bot-font-color: black;
+        --df-messenger-chat-collapse-icon-size: 16px;
         --df-messenger-focus-color: black;
       }
 
